precompiles/utils/macro/tests/precompile/compile-fail/discriminant/dont-return-option.stderr
error: The discriminant function must return an Option<_> (no type alias)
  --> tests/precompile/compile-fail/discriminant/dont-return-option.rs:24:36
   |
24 |     fn discriminant(address: H160) -> u32 {
   |                                       ^^^
